# TaikoCopy

./: .gitignore  Cargo.toml  README.md  export_release.sh  paths.ron
assets/base/maps/352682 LeaF - Wizdomiot/: LeaF - Wizdomiot (SKSalt) [Muzukashii].osu
assets/base/maps/544922 t+pazolite - Intro - the other Side/: t+pazolite - Intro - the other Side (Taikocracy) [Futsuu].osu
assets/base/maps/90385 Igorrr - Unpleasant Sonata/: Igorrr - Unpleasant Sonata (Sieg) [Zukisinx's Muzukashii].osu
content/base/: codes.ron
export/assets/base/config/: input.ron
resources/: config.ron  lang.ron
resources/assets/maps/106212 LeaF - MEPHISTO/: LeaF - MEPHISTO (Alumetorz).osb
resources/assets/maps/364132 An - Tephereth/: An - Tephereth (SKSalt) [Muzukashii].osu
src/: components.rs  main.rs  resources.rs  states.rs  systems.rs  utils.rs
