[package]
name = "taiko-copy"
version = "0.1.0"
authors = ["jojo <jojolepromain@gmail.com>"]

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst", branch="develop" }
futures = "*"
rayon = "*"
rand = "0.3.16"
time = "0.1"
winit = "0.7"
rusttype = "*"
imagefmt = "*"
#specs = "*"
#shred = "*"
walkdir = "1"
itertools = "0.7.0"
log = "*"
amethyst-extra = { path = "../amethyst-extra" }
